k8s/ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: cicd-project

spec:
  stripPrefix:
    prefixes:
      - /todo
      - /todo/
