k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: cicd-project
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: cicd-project-stripprefix@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
